# Devious-Editor-2

./: CMakeLists.txt  LICENSE.txt  README.md  changelog.md  mod.json
.github/workflows/: build.yml
libs/enet/: CMakeLists.txt  packet.c  peer.c  protocol.c  unix.c
libs/enet/include/: callbacks.h  enet.h  unix.h
src/: main.cpp
src/hooks/: EditorHooks.cpp  EditorPauseLayer.cpp  MenuLayer.cpp  SetupTriggerPopup.cpp
src/network/: DiscoveryManager.cpp  DiscoveryManager.hpp  NetworkManager.cpp  NetworkManager.hpp  Packets.hpp
src/sync/: SyncManager.cpp  SyncManager.hpp
src/ui/: HostPopup.cpp  HostPopup.hpp  JoinPopup.cpp  JoinPopup.hpp  Popups.cpp  Popups.hpp
